--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!doctype html>
-<h1>Welcome to my new site</h1>
-<h2>Lots if good stuff coming soon.</h2>
+<h1>Mikeala Francis</h1>
+<h2>Lots of good stuff coming soon.</h2>
