--- a/about.html
+++ b/about.html
@@ -2,4 +2,8 @@
 <head></head>
 <body>
  <h1>About Me</h1>
+ <p>
+  My name is Mikeala Francis. I am a Graphic and Web Design student at Art Institute. 
+  In my spare time, I usually like to read, draw, and write.
+ </p>
 </body>
