--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <body>
  <h1>About Me</h1>
  <p>
-  My name is Mikeala Francis. I am a Graphic and Web Design student at Art Institute. 
+  My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute. 
   In my spare time, I usually like to read, draw, and write.
+  My motto is: Be weird, Be Original.
  </p>
 </body>
