--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head></head>
 <body>
+ <a href="index.html">Home</a>
  <h1>About Me</h1>
  <p>
   My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami. 
