--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <head></head>
 <body>
  <a href="index.html">Home</a>
+ <a href="about.html">About Me</a>
  <h1>About Me</h1>
  <p>
   My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami. 
