--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
-|<a href="index.html">Home</a>|<a href="about.html">About Me</a>
+<a href="index.html">Home</a>|<a href="about.html">About Me</a>
 <h1>Mikeala Francis</h1>
 <h2>Lots of good stuff coming soon.</h2>
