--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="http://facebook.com/MikealaFrancis">Facebook</a>
+<a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="http://www.facebook.com/MikealaFrancis">Facebook</a>
 <h1>Mikeala Francis</h1>
 <h2>Lots of good stuff coming soon.</h2>
-<img src=http://www.symbols.com/gi.php?type=1&id=6&i=1">
