--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
-<a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="https://www.facebook.com/">Facebook</a>|<a href="https://twitter.com/">Twitter</a></a>
+<a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="https://www.facebook.com/">Facebook</a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a>|</a><a href="https://twitter.com/">Twitter</a></a>
 <h1>Mikeala Francis</h1>
 <h2>Lots of good stuff coming soon.</h2>
