--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <img src="https://s-media-cache-ak0.pinimg.com/originals/58/51/95/58519522d64be30eb53362c906a8f2e4.jpg" title="My Logo" width="240" height="140">
-<h1>Mikeala Francis</h1>
-<h2>A simple girl who enjoys the creative things in life.</h2><a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="https://www.facebook.com/">Facebook</a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a>|<a href="https://twitter.com/">Twitter</a></a>
+<h1>Mikeala Francis</h1><a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="https://www.facebook.com/">Facebook</a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a>|<a href="https://twitter.com/">Twitter</a></a>
+<h2>A simple girl who enjoys the creative things in life.</h2>
 
 <p>Welcome to my website. A place where you can find out the little the things about myself.</p>
