--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<img src="https://s-media-cache-ak0.pinimg.com/originals/58/51/95/58519522d64be30eb53362c906a8f2e4.jpg" title="My Logo" width="240" height="140"><a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="https://www.facebook.com/">Facebook</a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a>|<a href="https://twitter.com/">Twitter</a></a>
+<img src="https://www.flickr.com/photos/134358199@N04/shares/3G35x5" title="My Logo" width="240" height="140"><a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="https://www.facebook.com/">Facebook</a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a>|<a href="https://twitter.com/">Twitter</a></a>
 <h1>Mikeala Francis</h1>
 <h2>A girl who simply enjoys the creative things in life.</h2>
 
