--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <head>
   <style>
-    body{
-      background-color: paleturquoise;
+    body {
+      background-color: wheat;
+      color:cyan ;
     }
   </style>
 </head>
