--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
 <img src="https://farm1.staticflickr.com/454/19931439628_60315eb5a3_n.jpg" title="My Logo" width="100" height="140"><a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="https://www.facebook.com/">Facebook</a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a>|<a href="https://twitter.com/">Twitter</a></a>
+<style>
+  h1 {
+    color: #795548;
+  }
 <h1>Mikeala Francis</h1>
+</style>
 <h2>A girl who simply enjoys the creative things in life.</h2>
 
 <p>Welcome to my website. Here is where you can find out how art and design allows me to express myself in a way words cannot.  </p>
