--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
   <style>
     body {
-      background-color: wheat;
-      color:brown ;
+      background-color: #eddace;
+      color:895149 ;
     }
     h1 {
-    color: #795548;
+    color: #57322b;
   }
   </style>
 </head>
