--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     body {
       background-color: #eddace;
       color:895149 ;
+      font-family: Impact;
     }
     h1 {
     color: #57322b;
