--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     body {
       background-color: #eddace;
       color:895149 ;
-      font-family: Arial;
+      font-family: Verdana, sans-serif;
     }
     h1 {
     color: #57322b;
+    font-family: Tahoma, sans-serif;
   }
   </style>
 </head>
