--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <style>
     body {
       background-color: #eddace;
-      color:895149 ;
+      color:#a8755e ;
       font-family: Verdana, sans-serif;
     }
     h1 {
