--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <head>
+  <link href='http://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
   <style>
     body {
       background-color: #eddace;
@@ -12,6 +13,7 @@
   }
   h2 {
     color: #ab6367;
+    font-family: 'Playbill', cursive;
   }
   </style>
 </head>
