--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!doctype html>
 <head>
-  <link href='http://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <style>
     body {
       background-color: #eddace;
       color:#a8755e ;
-      font-family: Verdana, sans-serif;
+     font-family: 'Montserrat', sans-serif;
     }
     h1 {
     color: #57322b;
-    font-family: Tahoma, sans-serif;
+    font-family: 'Pinyon Script', cursive;
   }
   h2 {
     color: #ab6367;
-  }
-  p {
-    font-family: 'Playbill', cursive;
   }
   </style>
 </head>
