--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   }
   h2 {
     color: #ab6367;
+    font-family: 'Pinyon Script', cursive;
+  }
+  p {
+  font-family: 'Montserrat', sans-serif;
   }
   </style>
 </head>
