--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       background-color: #eddace;
       color:#a8755e ;
       font-family: 'Pinyon Script', cursive;
+      background-image: url(https://static.pexels.com/photos/1880/love-pen-bed-drinking-large.jpg);
+      background-size: cover;
     }
     h1 {
     color: #57322b;
