--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       background-size: cover;
     }
     h1 {
-    color: #57322b;
+    color: #a8755;
      font-family: 'Montserrat', sans-serif;
   }
   h2 {
