--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     color: #ab6367;
     font-family: 'Pinyon Script', cursive;
   }
+  a href{
+    font-family: 'Montserrat', sans-serif;
+  }
   p {
   font-family: 'Montserrat', sans-serif;
   }
