--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </style>
 </head>
 <body>
-<img src="https://farm1.staticflickr.com/454/19931439628_60315eb5a3_n.jpg" title="My Logo" width="100" height="140">|<a href="index.html">Home</a>|<a href="about.html">About Me</a>||
+<img src="https://farm1.staticflickr.com/454/19931439628_60315eb5a3_n.jpg" title="My Logo" width="100" height="140">|<a href="index.html">Home</a>|<a href="about.html">About Me</a>
 <h1>Mikeala Francis</h1>
 
 <h2>A girl who simply enjoys the creative things in life.</h2>
