--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     font-family: 'Pinyon Script', cursive;
   }
   a href{
+    color: #a8755;
     font-family: 'Montserrat', sans-serif;
   }
   p {
@@ -35,6 +36,9 @@
 <p>Welcome to my website. Here is where you can find out how art and design allows me to express myself in a way words cannot.  </p>
 </body>
 <ul>
+  <li>
+  <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a>
+  </li>
   <li>
   <a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a>  
   </li>
