--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
   a href{
     color: #a8755;
     font-family: 'Montserrat', sans-serif;
+    text-decoration: underline;
   }
   p {
   font-family: 'Montserrat', sans-serif;
+  }
+  img {
+    border: 6px double #a8755 ;
   }
   </style>
 </head>
