--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   p {
   font-family: 'Montserrat', sans-serif;
   }
-  img {
-    border: 6px double #a8755 ;
+  a:hover {
+    color: #bc2c43;
   }
   </style>
 </head>
