--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     text-decoration: underline;
   }
   p {
-    color: #7f5027;
+    color: #54351a;
   font-family: 'Montserrat', sans-serif;
   }
   a:hover {
