--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     text-decoration: underline;
   }
   p {
-    color: #54351a;
+    color:	#D2B48C ;
   font-family: 'Montserrat', sans-serif;
   }
   a:hover {
