--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
     color:	#EFDFBB;
   font-family: 'Montserrat', sans-serif;
   }
+  a:link {
+    color: #EFDFBB;
+  }
   a:hover {
     color: #bc2c43;
+  }
+  a:visited {
+    color: #EFDFBB;
   }
   </style>
 </head>
