--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   font-family: 'Montserrat', sans-serif;
   }
   a:link {
-    color: #EFDFBB;
+    color: #ab6367;
   }
   a:hover {
     color: #bc2c43;
