--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   font-family: 'Montserrat', sans-serif;
   }
   a:link {
-    color: #ab6367;
+    color: #bc2c43;
   }
   a:hover {
-    color: #bc2c43;
+    color: #C8AD7F;
   }
   a:visited {
     color: #EFDFBB;
