--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   a href{
     color: #a8755;
     font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
     text-decoration: underline;
   }
   p {
