--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   }
   a href{
     color: #a8755;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
+    font: 14px bold 'Montserrat', sans-serif;
     text-decoration: underline;
   }
   p {
