--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   }
   a href{
     color: #a8755;
-    font: 100px bold 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 48px;
     text-decoration: underline;
   }
   p {
