--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   a href{
     color: #a8755;
     font-family: 'Montserrat', sans-serif;
-    font-size: 48px;
+    font-size: 24pt;
     text-decoration: underline;
   }
   p {
