--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   a href{
     color: #a8755;
     font-family: 'Montserrat', sans-serif;
-    font-size: 48pt;
+    font-weight: bold;
+    font-size: 48px;
     text-decoration: underline;
   }
   p {
