--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     color: #a8755;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    font-size: "48";
+    font-size: 48px;
     text-decoration: underline;
   }
   p {
