--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
-  <link href'style.css' rel='stylesheet'>
+  <link href='style.css' rel='stylesheet'>
  
 </head>
 <body>
