--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<link href='style.css' rel='stylesheet'
 <head></head>
 <body>
  <a href="index.html">Home</a>|<a href="about.html">About Me</a>
