--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<link href='style.css' rel='stylesheet'
-<head></head>
+<head>
+ <link href='style.css' rel='stylesheet'>
+</head>
 <body>
  <a href="index.html">Home</a>|<a href="about.html">About Me</a>
  <h1>About Me</h1>
