--- a/about.html
+++ b/about.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <head>
+ <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
  <link href='style.css' rel='stylesheet'>
 </head>
 <body>
