--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
  <link href='style.css' rel='stylesheet'>
 </head>
 <body>
+ <img src="https://farm1.staticflickr.com/454/19931439628_60315eb5a3_n.jpg" title="My Logo" width="100" height="140">
  <a href="index.html">Home</a>|<a href="about.html">About Me</a>
  <h1>About Me</h1>
  <p>
