--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-<img src="https://farm1.staticflickr.com/454/19931439628_60315eb5a3_n.jpg" title="My Logo" width="100" height="140">|<a href="index.html">Home</a>|<a href="about.html">About Me</a>
+<img width="100" height="140 src="https://farm1.staticflickr.com/454/19931439628_60315eb5a3_n.jpg" title="My Logo" ">
+<nav>
+  <a href="index.html">Home</a>|<a href="about.html">About Me</a>
+</nav>
+
 <h1>Mikeala Francis</h1>
 
 <h2>A girl who simply enjoys the creative things in life.</h2>
