--- a/index.html
+++ b/index.html
@@ -20,12 +20,18 @@
 </body>
 <ul>
   <li>
-  <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a>
+    <nav>
+        <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a>
+    </nav>
   </li>
   <li>
-  <a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a>  
+    <nav>
+       <a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a>
+    </nav>
   </li>
   <li>
-    <a href="https://twitter.com/francis_mikeala">Twitter</a>
+    <nav>
+        <a href="https://twitter.com/francis_mikeala">Twitter</a>
+    </nav>
   </li>
 </ul>
