--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<img width="100" height="140 src="https://farm1.staticflickr.com/454/19931439628_60315eb5a3_n.jpg" title="My Logo" ">
+<img width="100" src="https://farm1.staticflickr.com/454/19931439628_60315eb5a3_n.jpg" title="My Logo">
 <nav>
   <a href="index.html">Home</a>|<a href="about.html">About Me</a>
 </nav>
