--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
  
 </head>
 <body>
+  <style>
+    a href{
+      text-align: left;
+      border-radius: 5px;
+      padding: 3px;
+    }
+  </style>
 
 <img width="100" src="https://farm1.staticflickr.com/454/19931439628_60315eb5a3_n.jpg" title="My Logo">
 <nav>
@@ -21,6 +28,7 @@
 <ul>
   <li>
     <nav>
+    
         <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a>
     </nav>
   </li>
