--- a/about.html
+++ b/about.html
@@ -6,7 +6,10 @@
 </head>
 <body>
  <img src="https://farm1.staticflickr.com/454/19931439628_60315eb5a3_n.jpg" title="My Logo" width="100">
- <a href="index.html">Home</a>|<a href="about.html">About Me</a>
+ <nav>
+  <a href="index.html">Home</a>|<a href="about.html">About Me</a>
+ </nav>
+ 
  <h1>About Me</h1>
  <p>
   My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami. 
