--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,7 @@
 <!doctype html>
 <head>
 
-
-
-<head>
 <body>
 <h1>Contact</h1>
 <p> You can contact me via email at mikealafrancis.gmail.com<p>
-<a href="
+<a href="index.html'>|<a href="about.html"></a>
