--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,14 @@
 <!doctype html>
 <head>
-
+  <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+  <link href='style.css' rel='stylesheet'>
+</head>
+<body>
+<img width="300" src="http://i.imgur.com/f246AsW.gif" title="My Logo">
+<nav>
+  <a href="index.html">Home</a>|<a href="about.html">About Me</a>
+</nav>
 <body>
 <h1>Contact</h1>
-<p> You can contact me via email at mikealafrancis.gmail.com<p>
-<a href="index.html'>|<a href="about.html"></a>
+
