--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <img width="300" src="http://i.imgur.com/f246AsW.gif" title="My Logo">
 <nav>
-  <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html"
+  <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
 </nav>
 
 <h1>Mikeala Francis</h1>
