--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <body>
  <img src="http://i.imgur.com/f246AsW.gif" title="My Logo" width="300">
  <nav>
-  <a href="index.html">Home</a>|<a href="about.html">About Me</a>
+  <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
  </nav>
  
  <h1>About Me</h1>
