--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,6 @@
 <nav>
   <a href="index.html">Home</a>|<a href="about.html">About Me</a>
 </nav>
-<body>
 <h1>Contact</h1>
+<p>You  can contact me at mikealafrancis.gmail.com</p>
 
