--- a/contact.html
+++ b/contact.html
@@ -10,5 +10,5 @@
   <a href="index.html">Home</a>|<a href="about.html">About Me</a>
 </nav>
 <h1>Contact</h1>
-<p>You  can contact me at mikealafrancis.gmail.com</p>
-
+<p>Contact me @mikealafrancis.gmail.com</p>
+</body>
