--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href='style.css' rel='stylesheet'>
 </head>
 <body>
-<img width="300" src="http://i.imgur.com/f246AsW.gif" title="My Logo">
+<img width="300" src="http://i.imgur.com/c2aJStK.jpg" title="My Logo">
 <nav>
   <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
 </nav>
