--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
        <a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a>
   </li>
   <li>
+    <footer>Created by Mikeala Francis &copy; 2015</footer>
         <a href="https://twitter.com/francis_mikeala">Twitter</a>
   </li>
 </ul>
