--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html>
 <head>
   <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
@@ -15,7 +16,7 @@
 <h2>A girl who simply enjoys the creative things in life.</h2>
 
 <p>Welcome to my website. Here is where you can find out how art and design allows me to express myself in a way words cannot.  </p>
-</body>
+
 <ul>
   <li>
         <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a>
@@ -27,4 +28,6 @@
        <a href="https://twitter.com/francis_mikeala">Twitter</a>
   </li>
 </ul>
+</body>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
+</html>
