--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html>
 <head>
  <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
@@ -11,9 +12,9 @@
  </nav>
  
  <h1>About Me</h1>
- <p>
-  My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami. 
+ <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami. 
   In my spare time, I usually like to read, draw, and write.
-  My motto is: Be weird, Be Original.
- </p>
+  My motto is: Be weird, Be Original.</p>
 </body>
+<footer>Created by Mikeala Francis &copy; 2015</footer>
+</html>
