--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html>
-<head>
-  <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
+  <head>
+    <title> Mikeala Francis website</title>
+     <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet'>
-</head>
-<body>
-<img width="300" src="http://i.imgur.com/f246AsW.gif" title="My Logo">
-<nav>
-  <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
-</nav>
+  </head>
+  <header>Mikeala Francis, A girl who simply enjoys the creative things in life</header>
+  <section>
+     <body>
+    <img width="300" src="http://i.imgur.com/f246AsW.gif" title="My Logo">
+     <nav>
+     <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
+     </nav>
 
 <h1>Mikeala Francis</h1>
 
@@ -29,5 +32,6 @@
   </li>
 </ul>
 </body>
+</section>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
