--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+  <header>img width="300" src="http://i.imgur.com/f246AsW.gif"</header>
   <head>
     <title> Mikeala Francis website</title>
      <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
