--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
-  <header>img width="300" src="http://i.imgur.com/f246AsW.gif"</header>
   <head>
-    <title> Mikeala Francis website</title>
+    <title> Mikeala Francis</title>
      <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet'>
