--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <h2>A girl who simply enjoys the creative things in life.</h2>
 
-<p>Welcome to my website. Here is where you can find out how art and design allows me to express myself in a way words cannot.  </p>
+<p>Welcome to my website. "It's good as an artist to always remember to see things in a new, weird way."-Tim Burton.</p>
 
 <ul>
   <li>
