--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <h2>A girl who simply enjoys the creative things in life.</h2>
 
-<p>Welcome to my website. "It's good as an artist to always remember to see things in a new, weird way."-Tim Burton.</p>
+<p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
 
 <ul>
   <li>
