--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title> Mikeala Francis</title>
      <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet'>
   </head>
+  <header><img width="300" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">  <nav>
+     <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
+     </nav></header>
   <section>
      <body>
-    <img width="300" src="http://i.imgur.com/f246AsW.gif" title="My Logo">
+    <img width="300" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">
      <nav>
      <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
      </nav>
