--- a/about.html
+++ b/about.html
@@ -1,20 +1,22 @@
 <!doctype html>
 <html>
 <head>
+ <meta charset="utf-8">
+ <title>About Me</title>
  <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
  <link href='style.css' rel='stylesheet'>
 </head>
-<body>
- <img src="http://i.imgur.com/f246AsW.gif" title="My Logo" width="300">
- <nav>
+<header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="300"> <nav>
   <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
- </nav>
- 
+ </nav></header>
+ <section>
+<body>
  <h1>About Me</h1>
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami. 
   In my spare time, I usually like to read, draw, and write.
   My motto is: Be weird, Be Original.</p>
 </body>
+</section>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
