--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <head>
+  <meta charset="utf-8">
+  <title>Contact Page</title>
   <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet'>
 </head>
-<body>
-<img width="300" src="http://i.imgur.com/f246AsW.gif" title="My Logo">
+<header><img width="300" src="http://i.imgur.com/f246AsW.gif" alt="My logo" title="Mikeala Francis Logo">
 <nav>
   <a href="index.html">Home</a>|<a href="about.html">About Me</a>
-</nav>
+</nav> </header>
+<section>
+<body>
 <h1>Contact</h1>
-<p>Contact me @mikealafrancis.gmail.com</p>
+<p> For more information, email me  @mikealafrancis.gmail.com</p>
 </body>
+</section>
+<footer>Created by Mikeala Francis &copy; 2015</footer>
