--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <section>
 <body>
 <h1>Contact</h1>
-<p> For more information, email me  @mikealafrancis.gmail.com</p>
+<p> For more information, email me at mikealafrancis@gmail.com</p>
 </body>
 </section>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
