--- a/midterm.html
+++ b/midterm.html
@@ -1,1 +1,18 @@
 <!doctype html>
+<html>
+  <head>
+  <meta charset="utf-8">
+  <title>Midterm Project</title>
+  < <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+  </head>
+  <article>
+  <header><img width="200" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">  <nav>
+     <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a></header>
+     <section>
+       <body>
+         <h1>Mikeala Francis Midterm</h1>
+       </body>
+     </section>
+     </article>
+</html>
