--- a/midterm.html
+++ b/midterm.html
@@ -10,9 +10,11 @@
   <header><img width="200" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">  <nav>
      <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a></header>
      <section>
+       <style>
        <body>
          <h1>Mikeala Francis Midterm</h1>
        </body>
+       </style>
      </section>
      </article>
 </html>
