--- a/midterm.html
+++ b/midterm.html
@@ -11,6 +11,12 @@
      <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a></header>
      <section>
        <style>
+       body {
+         background-color:#fff;
+         color:#fff;
+         background-image: url(https://pixabay.com/static/uploads/photo/2015/04/28/11/19/flower-743373_640.jpg);
+         background-size: cover;
+       }
        <body>
          <h1>Mikeala Francis Midterm</h1>
        </body>
