--- a/midterm.html
+++ b/midterm.html
@@ -14,8 +14,14 @@
        body {
          background-color:#fff;
          color:#fff;
-         background-image: url(https://pixabay.com/static/uploads/photo/2015/04/28/11/19/flower-743373_640.jpg);
+         background-image: url(https://static.pexels.com/photos/6872/cold-snow-nature-weather.jpg);
          background-size: cover;
+       }
+       h1 {
+         text-align: center;
+         font-family: 'Verdana', sans-serif;
+         font-size: 36px;
+         color: #fff5ee;
        }
        <body>
          <h1>Mikeala Francis Midterm</h1>
