--- a/midterm.html
+++ b/midterm.html
@@ -21,7 +21,7 @@
          text-align: center;
          font-family: 'Verdana', sans-serif;
          font-size: 36px;
-         color: #fff5ee;
+         color: #fff;
        }
        <body>
          <h1>Mikeala Francis Midterm</h1>
@@ -29,4 +29,5 @@
        </style>
      </section>
      </article>
+     <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
