--- a/midterm.html
+++ b/midterm.html
@@ -3,12 +3,12 @@
   <head>
   <meta charset="utf-8">
   <title>Midterm Project</title>
-  < <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   </head>
   <article>
   <header><img width="200" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">  <nav>
-     <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a></header>
+     <a href="index.html">Home</a>|</header>
      <section>
        <style>
        body {
@@ -19,7 +19,7 @@
        }
        h1 {
          text-align: center;
-         font-family: 'Verdana', sans-serif;
+         font-family: 'Monsterrat', sans-serif;
          font-size: 36px;
          color: #fff;
        }
