--- a/midterm-about.html
+++ b/midterm-about.html
@@ -10,7 +10,7 @@
 <article>
 <section>
 <style>
- html {
+ body {
   background-image: url((https://static.pexels.com/photos/6872/cold-snow-nature-weather.jpg);
   background-size: cover;
   }
