--- a/midterm-about.html
+++ b/midterm-about.html
@@ -10,10 +10,18 @@
 <article>
 <section>
 <style>
- body {
+html {
+  background-image: url((https://static.pexels.com/photos/6872/cold-snow-nature-weather.jpg);
+  background-size: cover;
+}
+
+ section {
   background-image: url((https://static.pexels.com/photos/6872/cold-snow-nature-weather.jpg);
   background-size: cover;
   }
+
+  <body>
+  <img src="https://instagram.com/p/34u9A1kxIzS0f7JNFF4oWNYFT_X_uXjLmPvi40/?taken-by=_heyitskeala_" alt="photo of me" title="Gala">
   </style>
   </section>
   <footer>Created by Mikeala Francis &copy; 2015</footer>
