--- a/midterm.html
+++ b/midterm.html
@@ -8,7 +8,7 @@
   </head>
   <article>
   <header><img width="200" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">  <nav>
-     <a href="index.html">Home</a>|</header>
+     <a href="index.html">Home</a>| <a href="midterm-about.html>About Page</a></header>
      <section>
        <style>
        body {
