--- a/midterm.html
+++ b/midterm.html
@@ -25,6 +25,7 @@
        }
        <body>
          <h1>Mikeala Francis Midterm</h1>
+         <img src="http://i.imgur.com/ozredKl.gif" alt="my designs" title="Textiles">
        </body>
        </style>
      </section>
