--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1>Mikeala Francis</h1>
 <h2>A girl who simply enjoys the creative things in life.</h2>
 <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
-
+<img width="300" src="http://i.imgur.com/ozredKl.gif" alt="my designs" title="Textiles">
 <ul>
   <li>
         <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a>
