--- a/midterm.html
+++ b/midterm.html
@@ -25,7 +25,7 @@
        }
        <body>
          <h1>Mikeala Francis Midterm</h1>
-         <img width="300" src="http://i.imgur.com/ozredKl.gif" alt="my designs" title="Textiles">
+         <img width="200" height="150" src="http://i.imgur.com/ozredKl.gif" alt="my designs" title="Textiles">
        </body>
        </style>
      </section>
