--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Mikeala Francis</title>
+    <title> Mikeala-Francis</title>
      <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet'>
@@ -15,8 +15,9 @@
 <h1>Mikeala Francis</h1>
 <h2>A girl who simply enjoys the creative things in life.</h2>
 <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
-<img width="200" src="http://i.imgur.com/ozredKl.gif" alt="my designs" title="Textiles">
-<img width="200" src="http://i.imgur.com/D9Ujwpq.gif" alt="my designs" title="The Royal Show"
+<img width="200" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles">
+<img width="200" src="http://i.imgur.com/D9Ujwpq.gif" alt="my-designs" title="The-Royal-Show">
+<img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
 <ul>
   <li>
         <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a>
