--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet'>
   </head>
-  <header><img width="200" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo"><nav>
+  <header><img width="150" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo"><h1>Mikeala Francis</h1><nav>
      <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
      </nav></header>
   <section>
      <body>
-<h1>Mikeala Francis</h1>
 <h2>A girl who simply enjoys the creative things in life.</h2>
 <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
 <img width="200" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles"><br>
