--- a/about.html
+++ b/about.html
@@ -7,12 +7,12 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
  <link href='style.css' rel='stylesheet'>
 </head>
-<header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="300"> <nav>
+<header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="150"><h1>About Me</h1><nav>
   <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
  </nav></header>
  <section>
 <body>
- <h1>About Me</h1>
+ 
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami. 
   In my spare time, I usually like to read, draw, and write.
   My motto is: Be weird, Be Original.</p>
