--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,11 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet'>
 </head>
-<header><img width="300" src="http://i.imgur.com/f246AsW.gif" alt="My logo" title="Mikeala Francis Logo">
-<nav>
-  <a href="index.html">Home</a>|<a href="about.html">About Me</a>
-</nav> </header>
+<header><img width="150" src="http://i.imgur.com/f246AsW.gif" alt="My logo" title="Mikeala Francis Logo"><h1>Contact</h1><nav>
+  <a href="index.html">Home</a>|<a href="about.html">About Me</a></nav></header>
 <section>
 <body>
-<h1>Contact</h1>
+
 <p> For more information, email me at mikealafrancis@gmail.com</p>
 </body>
 </section>
