--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
  </nav></header>
  <section>
 <body>
- <img width="150" src="https://instagram.com/p/34u9A1kxIzS0f7JNFF4oWNYFT_X_uXjLmPvi40/?taken-by=_heyitskeala_" alt="photo of me" title="Gala">
+ <img width="150" src=" alt="photo of me" title="Gala">
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami. 
   In my spare time, I usually like to read, draw, and write.
   My motto is: Be weird, Be Original.</p>
