--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
  </nav></header>
  <section>
 <body>
- <img width="150" src=" alt="photo of me" title="Gala">
+ <img width="150" src="http://i.imgur.com/feSO8HQ.gif" alt="photo of me" title="Gala">
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami. 
   In my spare time, I usually like to read, draw, and write.
   My motto is: Be weird, Be Original.</p>
