--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
      <body>
 <h2>A girl who simply enjoys the creative things in life.</h2>
 <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
-<img width="200" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles"><br>
-<img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
+<img width="200" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles"><img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
 <ul>
   <li>
         <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a>
