--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <section>
      <body>
       <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
-      <img width="200" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles"><img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
+      <img width="200" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles">
+      <img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
 </section>
 <ul>
   <li>
