--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   <h1>Mikeala Francis</h1><nav>
      <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
      </nav></header>
-  <section>
+     <article>
      <body>
       <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
+      <section>
       <img width="200" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles">
       <img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
-</section>
+      </section>
 <ul>
   <li>
         <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a>
