--- a/about.html
+++ b/about.html
@@ -10,13 +10,15 @@
 <header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="150"><h1>About Me</h1><nav>
   <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
  </nav></header>
- <section>
+ <article>
 <body>
+ <section>
  <img width="150" src="http://i.imgur.com/feSO8HQ.gif" alt="photo of me" title="Gala">
+ </section>
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami. 
   In my spare time, I usually like to read, draw, and write.
   My motto is: Be weird, Be Original.</p>
 </body>
-</section>
+</article>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
