--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
       <img width="200" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles">
       <img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
       </section>
+      <strong>
         <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a><br>
        <a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a><br>
        <a href="https://twitter.com/francis_mikeala">Twitter</a>
+       </strong>
 </body>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
