--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
       <section>
       <img width="200" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles">
+      </section>
+      <section>
       <img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
       </section>
       <strong>
