--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
      <body>
       <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
       <section>
-      <img width="200" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles">
-      </section>
+      <img width="300" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles">
+      </section><br>
       <section>
       <img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
       </section>
