--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
  <section>
  <img width="150" src="http://i.imgur.com/feSO8HQ.gif" alt="photo of me" title="Gala">
  </section>
- <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami.
+ <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami.<br>
 In my spare time, I usually like to read, draw, and write. My motto is: Be weird, Be Original.</p>
 </body>
 </article>
