--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Mikeala-Francis</title>
+    <title> Home:Mikeala-Francis</title>
      <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet'>
@@ -13,9 +13,9 @@
      <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
      </nav></header>
      <article>
+       <section>
      <body>
       <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
-      <section>
       <img width="300" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles"><br>
       <img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
       </section>
