--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
       <img width="300" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles"><br>
       <img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
+      <a href="https://www.codeavengers.com/certificate.html">Certificate of Completion</a>
       </section>
       <strong>
         <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a><br>
