--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
       <img width="300" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles"><br>
       <img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
-      <img width="300" src="https://www.codeavengers.com/certificate.html" alt="codeavengers certificate" title="Certificate of Completion">
       </section>
+      <a href="https://www.codeavengers.com/certificate.html">Certificate of Completion</a>
       <strong>
         <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a><br>
        <a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a><br>
