--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img width="300" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles"><br>
       <img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
       </section>
-      <a href="https://www.codeavengers.com/certificate.html">Certificate of Completion</a>
+      <a href="https://www.codeavengers.com/certificate.html" target=_"blank">Certificate of Completion</a>
       <strong>
         <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a><br>
        <a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a><br>
