--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <article>
      <body>
       <section>
-      <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p>
+      <p> Welcome to my homepage. I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.</p><br>
       <p><a href="https://www.codeavengers.com/certificate.html" target=_"blank">Certificate of Completion</a></p>
       <img width="300" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles"><br>
       <img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
