--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
      <body>
       <section>
       <p> Welcome to my homepage.<br> I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.<br><a href="https://www.codeavengers.com/certificate.html">Certificate of Completion</a></p>
-      <img width="300" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles"><br>
-      <img width="200" src="http://i.imgur.com/wvuiQ3q.gif" alt="my-designs" title="blsck-and-white-flowers">
+      <img width="300" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles">
+      <img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles">
       </section>
       
       <strong>
