--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <body>
       <section>
       <p> Welcome to my homepage.<br> I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.<br><a href="https://www.codeavengers.com/certificate.html">Certificate of Completion</a></p>
-      <img width="300" src="http://i.imgur.com/ozredKl.gif" alt="my-designs" title="Textiles">
+      <img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles">
       <img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles">
       </section>
       
