--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <section>
       <p> Welcome to my homepage.<br> I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.<br><a href="https://www.codeavengers.com/certificate.html">Certificate of Completion</a></p>
       <img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles">
-      <img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles">
+      <img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"><br>
+      <img width="300" src="http://i.imgur.com/U7f8qzK.gif" alt="my-designs" title="Black-and-White-Flowers">
       </section>
       
       <strong>
