--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       <img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles">
       <img width="300" src="http://i.imgur.com/U7f8qzK.gif" alt="my-designs" title="Black-and-White-Flowers">
       </section>
-      
       <strong>
         <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a><br>
        <a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a><br>
        <a href="https://twitter.com/francis_mikeala">Twitter</a>
        </strong>
 </body>
+</article>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
