--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <link href='style.css' rel='stylesheet'>
 </head>
 <header><img width="150" src="http://i.imgur.com/f246AsW.gif" alt="My logo" title="Mikeala Francis Logo"><h1>Contact</h1><nav>
-  <a href="index.html">Home</a>|<a href="about.html">About Me</a></nav></header>
+  <a href="index.html">Home</a>|<a href="about.html">About Me</a><a href="contact.html">Contact</a></nav></header>
 <section>
 <body>
 <p> For more information, email me at mikealafrancis@gmail.com</p>
