--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8">
  <title>About Me</title>
- <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
  <link href='style.css' rel='stylesheet'>
 </head>
