--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,13 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Page</title>
-  <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet'>
 </head>
-<header><img width="150" src="http://i.imgur.com/f246AsW.gif" alt="My logo" title="Mikeala Francis Logo"><h1>Contact</h1><nav>
+<header><img width="150" src="http://i.imgur.com/f246AsW.gif" alt="My logo" title="Mikeala Francis Logo">
+<h2>A girl who simply enjoys the creative things in life</h2>
+<h1>Contact</h1><nav>
   <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a></nav></header>
 <section>
 <body>
