--- a/midterm.html
+++ b/midterm.html
@@ -2,33 +2,39 @@
 <html>
   <head>
   <meta charset="utf-8">
-  <title>Midterm Project</title>
-   <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+  <title>Midterm Exam</title>
+  <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   </head>
-  <article>
-  <header><img width="200" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">  <nav>
-     <a href="index.html">Home</a>|</header>
-     <section>
-       <style>
-       body {
-         background-color:#fff;
-         color:#fff;
-         background-image: url(https://static.pexels.com/photos/6872/cold-snow-nature-weather.jpg);
-         background-size: cover;
-       }
-       h1 {
-         text-align: center;
-         font-family: 'Monsterrat', sans-serif;
-         font-size: 36px;
-         color: #fff;
-       }
-       <body>
-         <h1>Mikeala Francis Midterm</h1>
-         <img width="200" height="150" src="http://i.imgur.com/ozredKl.gif" alt="my designs" title="Textiles">
-       </body>
-       </style>
-     </section>
+  <section>
+    <style>
+    html {
+      background-image: url(http://img06.deviantart.net/c2b3/i/2008/291/6/0/wood_texture_ii_by_resurgidaresources.jpg);
+      background-size: cover;
+    }
+    h1,
+    h2,
+    h4 {
+      text-transform: uppercase;
+    }
+      h1 {
+        font-family: 'Verdana', sans-serif;
+        font-size: 48px;
+        color: #fff;
+        text-shadow: 0 2px 0 #c9c9c9;
+      }
+      a {
+        #F06529
+      }
+    </style>
+    <h1>Midterm Exam</h1>
+    <h2>IM1200 Basic Web Design</h2>
+    <h4>Mikeala Francis</h4>
+    <h4>August 12 <sup>th</sup> 2015</h4>
+    <a href="http://www.w3.org/html/logo/">
+<img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
+</a><br>
+  </section>
      </article>
      <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
