--- a/midterm.html
+++ b/midterm.html
@@ -25,6 +25,10 @@
         color: #fff;
         text-shadow: 0 2px 0 #c9c9c9;
       }
+      h2,
+      h4 {
+        text-align: center;
+      }
       a {
         #F06529
       }
