--- a/midterm.html
+++ b/midterm.html
@@ -32,6 +32,11 @@
       a {
         #F06529
       }
+      footer {
+        position: fixed;
+        bottom: 24px;
+        right: 38px;
+      }
     </style>
     
     <h2>IM1200 Basic Web Design</h2>
