--- a/midterm.html
+++ b/midterm.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>Midterm Exam</title>
   <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   </head>
   <header><img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
   <h1>Midterm Exam</h1></header>
+  </head>
   <section>
     <style>
     html {
