--- a/midterm.html
+++ b/midterm.html
@@ -17,6 +17,7 @@
     h1,
     h2,
     h4 {
+      font-family: 'Yanone Kaffeesatz', sans-serif;;
       text-transform: uppercase;
     }
       h1 {
