--- a/midterm.html
+++ b/midterm.html
@@ -35,9 +35,10 @@
         #F06529
       }
       footer {
+        font-size: 18px;
         position: fixed;
-        bottom: 24px;
-        right: 38px;
+        bottom: 35px;
+        right: 77px;
       }
     </style>
     
