--- a/midterm.html
+++ b/midterm.html
@@ -34,6 +34,11 @@
       a {
         #F06529
       }
+      img {
+        position: fixed;
+        top: 20px;
+        left: 10px;
+      }
       footer {
         font-size: 18px;
         position: fixed;
