--- a/midterm.html
+++ b/midterm.html
@@ -43,7 +43,7 @@
     </style>
     
     <h2>IM1200 Basic Web Design</h2>
-    <h4>Mikeala Francis</h4>
+    <h4>Mikeala Francis|<a href="mikealafrancis.me">Mikeala Francis</a></h4>
     <h4>August 12 <sup>th</sup> 2015</h4>
     <a href="http://www.w3.org/html/logo/">
 
