--- a/midterm.html
+++ b/midterm.html
@@ -5,8 +5,8 @@
   <title>Midterm Exam</title>
   <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
   </head>
-  <header><img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
-  <h1>Midterm Exam</h1></header>
+  <header>
+ </header>
   </head>
   <section>
     <style>
@@ -41,14 +41,10 @@
         right: 77px;
       }
     </style>
-    
+     <h1>Midterm Exam</h1>
     <h2>IM1200 Basic Web Design</h2>
     <h4>Mikeala Francis|<a href="mikealafrancis.me/index.html">Mikeala Francis</a></h4>
     <h4>August 12 <sup>th</sup> 2015</h4>
-    <a href="http://www.w3.org/html/logo/">
-
-</a><br>
+    <a href="http://www.w3.org/html/logo/"><img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
   </section>
-     </article>
-     <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
