--- a/midterm.html
+++ b/midterm.html
@@ -11,7 +11,7 @@
   <section>
     <style>
     html {
-      background-image: url(http://img06.deviantart.net/c2b3/i/2008/291/6/0/wood_texture_ii_by_resurgidaresources.jpg);
+      background-image: url(https://pixabay.com/static/uploads/photo/2013/03/09/07/12/boards-91769_640.jpg);
       background-size: cover;
       color: #fff;
     }
