--- a/midterm.html
+++ b/midterm.html
@@ -11,7 +11,7 @@
   <section>
     <style>
     html {
-      background-image: url(https://pixabay.com/static/uploads/photo/2013/03/09/07/12/boards-91769_640.jpg);
+      background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/b4/Iroko_wood.jpg);
       background-size: cover;
       color: #fff;
     }
