--- a/midterm.html
+++ b/midterm.html
@@ -36,7 +36,7 @@
     </style>
      <h1>Midterm Exam</h1>
     <h2>IM1200 Basic Web Design</h2>
-    <h4>Mikeala Francis</h4>
+    <h4><a href="midterm.html">Mikeala Francis</a></h4>
     <h4>August 12 <sup>th</sup> 2015</h4>
     <a href="http://www.w3.org/html/logo/"><img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
   </section>
