--- a/certificate.html
+++ b/certificate.html
@@ -15,6 +15,7 @@
     <img id="division" src="/images/certificate/accent-division.png">
   </header>
   <section>
+    <a href="index.html">Home</a>
     <div class="certifies">certifies that</div>
     <h1 id="fullname">John Doe</h1>
     <div class="completed">successfully completed the online course</div>
