--- a/pricing.html
+++ b/pricing.html
@@ -7,13 +7,18 @@
 <tr>
   <th>Basic Package</th>
   <th>Premium Package</th>
+  <th>VIP Package</th>
 </tr>
 <tr>
   <td>This is the basic package;
 contains 1 website of no more than 3 pages.
-  </td>|
+  </td>
   <td>This package contains 1 website 
-including hosting.</td>
+including hosting.
+</td>
+<td>This package contains 1 website;
+includes logos, photos, and unlimited pages.
+</td>
 </tr>
 </table>
 </body>
