--- a/pricing.html
+++ b/pricing.html
@@ -6,6 +6,11 @@
 <h1>Pricing</h1>
 <table>
 <tr>
+  <th><i class="fa fa-star"></i></th>
+  <th><i class="fa fa-check"></i></th>
+  <th><i class="fa fa-plus"></i></th>
+  </tr>
+  <tr>
   <th>Basic Package</th>
   <th>Premium Package</th>
   <th>VIP Package</th>
