--- a/pricing.html
+++ b/pricing.html
@@ -5,6 +5,12 @@
     table {
       border: 2px solid #000;
     }
+    tr {
+      border: 1px solid #f00;
+    }
+    td {
+      border: 1px solid #bada55;
+    }
   </style>
 </head>
 <body>
