--- a/pricing.html
+++ b/pricing.html
@@ -5,9 +5,14 @@
     table {
       border: 2px solid #000;
     }
+    th { 
+      background-color: #323;
+    }
+    
     tr {
       border: 1px solid #f00;
     }
+    
     td {
       border: 1px solid #bada55;
     }
