--- a/pricing.html
+++ b/pricing.html
@@ -13,6 +13,10 @@
       border: 1px solid #f00;
     }
     
+    tr:nth-child(4) {
+    font-size: 48px;
+    text-align: center;
+    }
     td {
       border: 1px solid #bada55;
     }
