--- a/pricing.html
+++ b/pricing.html
@@ -7,6 +7,7 @@
     }
     th { 
       background-color: #078;
+      text-transform: uppercase;
     }
     
     tr {
@@ -14,7 +15,7 @@
     }
     
     tr:nth-child(4) {
-    font-size: 48px;
+    font-size: 34px;
     text-align: center;
     }
     td {
