--- a/pricing.html
+++ b/pricing.html
@@ -7,7 +7,6 @@
     }
     th { 
       background-color: #078;
-      color: #000;
       text-transform: uppercase;
     }
     
@@ -23,7 +22,9 @@
     tr:nth-child(1) {
       font-size: 36px;
     }
-    
+    tr:nth-child(2) {
+      color: #000;
+    }
     td {
       border: 1px solid #bada55;
     }
