--- a/pricing.html
+++ b/pricing.html
@@ -21,9 +21,10 @@
     
     tr:nth-child(1) {
       font-size: 36px;
+      color: #fff;
     }
     tr:nth-child(2) {
-      color: #000;
+      color: #fff;
     }
     td {
       border: 1px solid #bada55;
