--- a/pricing.html
+++ b/pricing.html
@@ -6,7 +6,7 @@
       border: 2px solid #000;
     }
     th { 
-      background-color: #078;
+      background-color: #31FFF7;
       text-transform: uppercase;
     }
     
