--- a/pricing.html
+++ b/pricing.html
@@ -25,13 +25,18 @@
       color: #fff;
     }
     tr:nth-child(2) {
+      background-color: #422D15;
       color: #fff;
     }
     tr:nth-child(3) {
-      background-color: AF7EFF;
+      background-color: #AF7EFF;
     }
     td {
       border: 1px solid #bada55;
+    }
+    ul {
+      font-size: 20px;
+      text-align: center;
     }
   </style>
 </head>
@@ -66,6 +71,16 @@ includes logos, photos, and unlimited pages.
   <li>A custom PSD Design</li>
   <li>HTML/CSS Wesbite Code</li>
    </ul> 
+   <ul>
+     <li>A .com domain</li>
+     <li>3 Custom PSD Designs</li>
+     <li>HTML/CSS Website Code</li>
+   </ul>
+   <ul>
+     <li>2 .com domains</li>
+     <li>10 Custom PSD Designs</li>
+     <li>HTML/CSS Website Code</li>
+   </ul>
   </td>
   <td>
     
