--- a/pricing.html
+++ b/pricing.html
@@ -27,6 +27,7 @@
     tr:nth-child(2) {
       background-color: #422D15;
       color: #fff;
+      font-style: bold;
     }
     tr:nth-child(3) {
       background-color: #AF7EFF;
@@ -71,22 +72,20 @@ includes logos, photos, and unlimited pages.
   <li>A custom PSD Design</li>
   <li>HTML/CSS Wesbite Code</li>
    </ul> 
-   <ul>
+  </td>
+  <td>
+     <ul>
      <li>A .com domain</li>
      <li>3 Custom PSD Designs</li>
      <li>HTML/CSS Website Code</li>
    </ul>
-   <ul>
+  </td>
+  <td>
+       <ul>
      <li>2 .com domains</li>
      <li>10 Custom PSD Designs</li>
      <li>HTML/CSS Website Code</li>
    </ul>
-  </td>
-  <td>
-    
-  </td>
-  <td>
-    
   </td>
 </tr>
 <tr>
