--- a/pricing.html
+++ b/pricing.html
@@ -15,7 +15,7 @@
     }
     
     tr:nth-child(4) {
-    font-size: 34px;
+    font-size: 48px;
     text-align: center;
     }
     
@@ -97,6 +97,11 @@ includes logos, photos, and unlimited pages.
   <td>
     $99.95
   </td>
+</tr>
+<tr>
+  <td><a href="contact.html">Contact me Now!!!</a></td>
+  <td><a href="contact.html">Contact me Now!!!</a></td>
+  <td><a href="contact.html">Contact me Now!!!</a></td>
 </tr>
 </table>
 </body>
