--- a/pricing.html
+++ b/pricing.html
@@ -39,6 +39,26 @@
       font-size: 20px;
       text-align: center;
     }
+    .btn {
+  -webkit-border-radius: 12;
+  -moz-border-radius: 12;
+  border-radius: 12px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  background: #cfba9b;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
   </style>
 </head>
 <body>
@@ -99,9 +119,9 @@ includes logos, photos, and unlimited pages.
   </td>
 </tr>
 <tr>
-  <td><a href="contact.html">Contact me Now!!!</a></td>
-  <td><a href="contact.html">Contact me Now!!!</a></td>
-  <td><a href="contact.html">Contact me Now!!!</a></td>
+  <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
+  <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
+  <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
 </tr>
 </table>
 </body>
