--- a/pricing.html
+++ b/pricing.html
@@ -32,6 +32,10 @@
     tr:nth-child(3) {
       background-color: #AF7EFF;
     }
+    tr:nth-child(5) {
+      text-align: center;
+      height: 12px;
+    }
     td {
       border: 1px solid #bada55;
     }
