--- a/pricing.html
+++ b/pricing.html
@@ -74,52 +74,50 @@
   <th><i class="fa fa-plus"></i></th>
   </tr>
   <tr>
-  <th>Basic Package</th>
-  <th>Premium Package</th>
-  <th>VIP Package</th>
+  <th>Graphic Design Package</th>
+  <th>Web Design Package</th>
+  <th>Print Package</th>
 </tr>
 <tr>
-  <td>This is the basic package;
-contains 1 website of no more than 3 pages.
+  <td>This is the Graphic Design package;
+contains logo designs and poster designs.
   </td>
-  <td>This package contains 1 website 
-including hosting.
+  <td>This is the Web Design package;
+  contains 1 website with unlimited pages and HTML/CSS coding tutorials.
  </td>
- <td>This package contains 1 website;
-includes logos, photos, and unlimited pages.
+ <td>This is the Print package;
+ contains business cards, letterheads, and brochure designs .
  </td>
 </tr>
 <tr>
   <td>
    <ul>
-  <li>A.com domain</li>
-  <li>A custom PSD Design</li>
-  <li>HTML/CSS Wesbite Code</li>
+  <li>Posters</li>
+  <li>A custom logo Design</li>
    </ul> 
   </td>
   <td>
      <ul>
      <li>A .com domain</li>
-     <li>3 Custom PSD Designs</li>
+     <li>A custom logo Designs</li>
      <li>HTML/CSS Website Code</li>
    </ul>
   </td>
   <td>
        <ul>
-     <li>2 .com domains</li>
-     <li>10 Custom PSD Designs</li>
-     <li>HTML/CSS Website Code</li>
+     <li>3-D printing</li>
+     <li>10 Custom logo Designs</li>
    </ul>
   </td>
 </tr>
 <tr>
-  <td>$15.95
+  <td>$70
   </td>
   <td>
-    $30.95
+    $150
   </td>
   <td>
-    $99.95
+    $300
   </td>
 </tr>
 <tr>
